--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_MOVIES_API=https://gogoanime.herokuapp.com/anime-movies
-REACT_APP_POPULAR_API=https://gogoanime.herokuapp.com/popular
-REACT_APP_ROOT_API=https://gogoanime.herokuapp.com/
-REACT_APP_GENRE_API=https://gogoanime.herokuapp.com/genre/
-REACT_APP_SEARCH_API=https://gogoanime.herokuapp.com/search?
-REACT_APP_ANIME_DETIALS_API=https://gogoanime.herokuapp.com/anime-details/
-REACT_APP_VID_CDN_API=https://gogoanime.herokuapp.com/vidcdn/watch/
+REACT_APP_MOVIES_API=https://gogoanime-api-production-d603.up.railway.app/anime-movies
+REACT_APP_POPULAR_API=https://gogoanime-api-production-d603.up.railway.app/popular
+REACT_APP_ROOT_API=https://gogoanime-api-production-d603.up.railway.app/
+REACT_APP_GENRE_API=https://gogoanime-api-production-d603.up.railway.app/genre/
+REACT_APP_SEARCH_API=https://gogoanime-api-production-d603.up.railway.app/search?
+REACT_APP_ANIME_DETIALS_API=https://gogoanime-api-production-d603.up.railway.app/anime-details/
+REACT_APP_VID_CDN_API=https://gogoanime-api-production-d603.up.railway.app/vidcdn/watch/
