--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "animevilla",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Girishdevadiga.github.io/Anime-villa",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -25,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
